feat: Add Gumroad and Tally links

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <span class="lang-ru">Срок выполнения: до 24 часов</span>
                             </li>
                         </ul>
-                        <a href="YOUR_GUMROAD_LINK_QUICK" class="mt-auto w-full text-center bg-slate-200 text-slate-800 font-bold py-3 px-6 rounded-lg hover:bg-slate-300 transition-colors">
+                        <a href="arkaseme.gumroad.com/l/pzcvgl" class="mt-auto w-full text-center bg-slate-200 text-slate-800 font-bold py-3 px-6 rounded-lg hover:bg-slate-300 transition-colors">
                             <span class="lang-en">Order Quick for $15</span>
                             <span class="lang-ru">Заказать Quick за $15</span>
                         </a>
@@ -200,7 +200,7 @@
                                 <span class="lang-ru">Срок выполнения: до 48 часов</span>
                             </li>
                         </ul>
-                        <a href="YOUR_GUMROAD_LINK_THOROUGH" class="mt-auto w-full text-center bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">
+                        <a href="https://arkaseme.gumroad.com/l/bcatg" class="mt-auto w-full text-center bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">
                             <span class="lang-en">Order Thorough for $49</span>
                             <span class="lang-ru">Заказать Thorough за $49</span>
                         </a>
@@ -220,7 +220,7 @@
                     <span class="lang-en">To order your report, please fill out a short form. This helps us better understand your needs and deliver the highest quality result.</span>
                     <span class="lang-ru">Чтобы заказать отчет, пожалуйста, заполните короткую форму. Это поможет мне лучше понять вашу задачу и предоставить максимально качественный результат.</span>
                 </p>
-                <a href="YOUR_TALLY_FORM_LINK" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition-transform transform hover:scale-105 inline-block">
+                <a href="https://tally.so/r/3yVoWp" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-blue-700 transition-transform transform hover:scale-105 inline-block">
                     <span class="lang-en">Fill Out Order Form</span>
                     <span class="lang-ru">Заполнить форму заказа</span>
                 </a>
