--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <span class="lang-ru">Срок выполнения: до 24 часов</span>
                             </li>
                         </ul>
-                        <a href="arkaseme.gumroad.com/l/pzcvgl" class="mt-auto w-full text-center bg-slate-200 text-slate-800 font-bold py-3 px-6 rounded-lg hover:bg-slate-300 transition-colors">
+                        <a href="https://arkaseme.gumroad.com/l/pzcvgl" class="mt-auto w-full text-center bg-slate-200 text-slate-800 font-bold py-3 px-6 rounded-lg hover:bg-slate-300 transition-colors">
                             <span class="lang-en">Order Quick for $15</span>
                             <span class="lang-ru">Заказать Quick за $15</span>
                         </a>
